# openrunner

./: .env.example  .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  OPENRUNNER_YAML.md  PENDING.md  README.md  SHADCN_MIGRATION.md  electron-builder.json5  electron-builder.yml  electron.vite.config.ts  index.html  openrunner.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  openrunner.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_watcher.rs  database.rs  error.rs  file_watcher.rs  lib.rs  main.rs  models.rs  process_manager.rs  state.rs  stats_collector.rs  storage.rs  yaml_config.rs
src-tauri/src/cli/: commands.rs  detector.rs  mod.rs  ui.rs
src-tauri/src/commands/: cleanup_all_storage.rs  cleanup_storage.rs  clear_project_logs.rs  convert_multiple_projects.rs  create_group.rs  create_project.rs  delete_group.rs  delete_multiple_projects.rs  delete_project.rs  delete_session.rs  detect_system_editor.rs  export_group.rs  files.rs  get_all_statuses.rs  get_database_path.rs  get_groups.rs  get_last_completed_session.rs  get_last_metric.rs  get_project.rs  get_project_sessions.rs  get_project_sessions_with_stats.rs  get_projects.rs  get_recent_logs.rs  get_session.rs  get_session_logs.rs  get_session_metrics.rs  get_settings.rs  get_storage_stats.rs  groups.rs  import_group.rs  logs.rs  mod.rs  open_file_in_editor.rs  projects.rs  (+23 more)
(+124 files in other folders)
